--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -5,7 +5,7 @@
       {{ range .Data.Pages.GroupByDate "2006" }}
         <div class="block sm:flex mb-6" style="align-items: flex-start;">
           <div class="flex mr-0 sm:mr-10 text-3xl font-bold">
-            <div class="accented accent">{{ .Key }}</div>
+            <div class="relative mx-1 px-1 accent">{{ .Key }}</div>
           </div>
 
           <ul class="w-full">
