--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
   <div class="flex flex-col my-4 text-white text-5xl font-black">
-    <div class="text-center">Another <span class="accented accent">dark</span> corner<br>of the internet</div>
+    <div class="text-center">Another <span class="relative px-1 mx-1 accent">dark</span> corner<br>of the internet</div>
     <div class="flex justify-center">
       <div class="glitch overflow-hidden" data-text="°">°</div>
     </div>
