--- a/assets/scss/_styles.scss
+++ b/assets/scss/_styles.scss
@@ -1,6 +1,6 @@
 @import "colors";
 
-html {
+body {
   scroll-behavior: smooth;
   text-rendering: optimizeLegibility;
   font-feature-settings: "calt" 0, "tnum", "case", "rlig", "cv01", "cv02", "cv03", "cv04", "cv07";
