--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,17 +1,9 @@
 {{ define "main" }}
-  <div class="flex flex-col my-4 text-white text-5xl font-black">
+  <div class="flex flex-col items-center max-w-screen-md mx-auto my-4 px-4 text-white text-5xl font-black">
     <div class="text-center">Another <span class="relative px-1 mx-1 accent">dark</span> corner<br>of the internet</div>
-    <div class="flex justify-center">
-      <div class="glitch overflow-hidden" data-text="°">°</div>
-    </div>
-    <div class="flex justify-center">
-      <div class="glitch overflow-hidden" data-text="&ensp;&ensp;°">&ensp;&ensp;°</div>
-    </div>
-    <div class="flex justify-center">
-      <div class="glitch overflow-hidden" data-text="°">°</div>
-    </div>
-    <div class="flex justify-center">
-      <div class="glitch overflow-hidden font-feature-normal" data-text="<ₒ))><"><ₒ))><</div>
-    </div>
+    <div class="glitch overflow-hidden" data-text="°">°</div>
+    <div class="glitch overflow-hidden" data-text="&ensp;&ensp;°">&ensp;&ensp;°</div>
+    <div class="glitch overflow-hidden" data-text="°">°</div>
+    <div class="glitch overflow-hidden font-feature-normal" data-text="<ₒ))><"><ₒ))><</div>
   </div>
 {{ end }}
