--- a/assets/scss/_single.scss
+++ b/assets/scss/_single.scss
@@ -5,7 +5,8 @@
   @apply w-full;
 
   h1, h2, h3, h4, h5, h6 {
-    @apply my-4;
+    @apply mt-6;
+    @apply mb-4
   }
 
   p {
@@ -25,18 +26,13 @@
 
   blockquote {
     @apply mx-2;
-    @apply my-8;
+    @apply my-6;
   }
 
   @screen sm {
     blockquote {
-      @apply m-8;
+      @apply m-6;
     }
-  }
-
-  .table-wrapper {
-    @apply my-8;
-    @apply overflow-x-auto;
   }
 
   a[href^="#fnref:"] {
