--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-  <div class="my-4 text-center text-white text-5xl font-black">
-    <div class="glitch overflow-hidden" data-text="404">404</div>
+  <div class="flex flex-col items-center mx-auto my-4 px-4 text-white text-5xl font-black">
+    <div class="glitch" data-text="404">404</div>
   </div>
 {{ end }}
