--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,10 +1,10 @@
 {{ define "main" }}
   <div class="max-w-screen-md mx-auto my-4 px-4">
     <div class="glitch text-4xl font-bold" data-text="{{ .Title }}">{{ .Title }}</div>
-    <div class="mt-4">
+    <div class="mt-6">
       {{ range .Data.Pages.GroupByDate "2006" }}
-        <div class="block sm:flex mb-6 items-start">
-          <div class="flex ml-2 mr-0 sm:mr-10 text-3xl font-bold">
+        <div class="block sm:flex mt-6 first:mt-0 items-start">
+          <div class="flex ml-2 mr-0 sm:mr-10 mb-2 sm:mb-0 text-3xl font-bold">
             <div class="relative pl-1 accent">{{ .Key }}</div>
           </div>
           <ul class="w-full">
