improve glitch effect

--- a/assets/scss/_glitch.scss
+++ b/assets/scss/_glitch.scss
@@ -9,20 +9,17 @@
     @apply w-full;
     @apply h-full;
     @apply bg-dark-900;
-    @apply overflow-hidden;
 
     content: attr(data-text);
-    left: 3px;
-    animation-duration: 3s;
+    animation-duration: 10s;
     animation-timing-function: linear;
     animation-delay: 0s;
     animation-iteration-count: infinite;
-    animation-direction: reverse-alternate;
   }
 
   @for $i from 1 through 2 {
     @keyframes glitch-animation-#{$i} {
-      $steps: 20;
+      $steps: 25;
       @for $j from 0 through $steps {
         #{percentage($j * (1 / $steps))} {
           clip: rect(random(150)+px, 9999px, random(150)+px, 0);
@@ -32,12 +29,16 @@
   }
 
   &:before {
-    text-shadow: -3px 0 $red-100;
+    left: 1px;
+    text-shadow: -2px 0 $red-100;
     animation-name: glitch-animation-1;
+    animation-direction: alternate;
   }
 
   &:after {
-    text-shadow: -3px 0 $blue-100;
+    left: -1px;
+    text-shadow: -2px 0 $blue-100;
     animation-name: glitch-animation-2;
+    animation-direction: alternate;
   }
 }
