--- a/assets/scss/_accent.scss
+++ b/assets/scss/_accent.scss
@@ -8,8 +8,8 @@
       @apply bg-blue-300;
 
       content: "";
-      left: -1px;
-      bottom: -1px;
+      left: -4%;
+      bottom: -4%;
       width: 108%;
       transform: skewX(-16deg) skewY(-2deg);
       z-index: -1;
