remove inter and jetbrains mono

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -6,9 +6,9 @@
 @import "colors";
 @import "content";
 @import "glitch";
-@import "inter";
-@import "mono";
 @import "prism";
+@import "roboto";
+@import "roboto-mono";
 @import "single";
 @import "styles";
 /* purgecss end ignore */
