implement desktop header

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -6,6 +6,7 @@
 @import "colors";
 @import "content";
 @import "glitch";
+@import "headroom";
 @import "prism";
 @import "roboto";
 @import "roboto-mono";
