--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
   <div class="max-w-screen-md mx-auto my-4 px-4">
     <div class="single">
-      <h1 class="glitch" data-text="{{ .Title }}">{{ .Title }}</h1>
+      <h1 class="text-black" data-text="{{ .Title }}">{{ .Title }}</h1>
       {{ .Content }}
     </div>
     <div class="flex justify-between my-6 pt-6 text-sm text-dark-100 border-t border-dark-100">
