--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -19,3 +19,15 @@
 /* purgecss start ignore */
 @import "utilities";
 /* purgecss end ignore */
+
+$hamburger-padding-x: 1.25rem;
+$hamburger-padding-y: 1.25rem;
+$hamburger-layer-width: 1.875rem;
+$hamburger-layer-height: 0.1875rem;
+$hamburger-layer-spacing: 0.375rem;
+$hamburger-layer-border-radius: 0rem;
+$hamburger-layer-color: #fff;
+$hamburger-hover-opacity: 1;
+$hamburger-types: (squeeze);
+
+@import "node_modules/hamburgers/_sass/hamburgers/hamburgers";
