--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="{{ .Site.Language }}">
+<html lang="{{ .Site.Language }}" class="h-full">
   <head>
     {{ partial "head" . }}
   </head>
-  <body class="flex flex-col min-w-screen min-h-screen m-0 p-0 font-body bg-gray-900">
+  <body x-data="{ menu: false }" class="h-full flex flex-col min-w-screen min-h-screen m-0 p-0 font-body bg-white" :class="{ 'overflow-hidden': menu }">
     {{ partial "header" . }}
 
     <div class="w-full m-auto">
