--- a/assets/scss/_styles.scss
+++ b/assets/scss/_styles.scss
@@ -45,3 +45,18 @@ body {
     }
   }
 }
+
+.nav-item-animation {
+  @keyframes animation {
+    0% {
+      transform: scaleY(0);
+    }
+
+    100% {
+      transform: scaleY(1);
+    }
+  }
+
+  transform-origin: bottom;
+  animation: 300ms cubic-bezier(0.4, 0, 0.2, 1) 0s 1 animation;
+}
