add index and 404

--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-  <div class="flex flex-col items-center mx-auto my-4 px-4 text-white text-5xl font-black">
-    <div class="glitch" data-text="404">404</div>
-  </div>
+  <svg class="max-w-full h-24 m-auto p-5" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 -0.5 34 10" shape-rendering="crispEdges">
+    <path stroke="#212121" d="M0 0h9M12 0h9M24 0h9M0 1h1M5 1h1M8 1h2M12 1h1M20 1h2M24 1h1M29 1h1M32 1h2M0 2h1M5 2h1M9 2h1M12 2h1M17 2h1M21 2h1M24 2h1M29 2h1M33 2h1M0 3h1M5 3h1M9 3h1M12 3h1M17 3h1M21 3h1M24 3h1M29 3h1M33 3h1M0 4h1M5 4h1M9 4h1M12 4h1M17 4h1M21 4h1M24 4h1M29 4h1M33 4h1M0 5h1M5 5h1M9 5h1M12 5h1M17 5h1M21 5h1M24 5h1M29 5h1M33 5h1M0 6h1M9 6h1M12 6h1M17 6h1M21 6h1M24 6h1M33 6h1M0 7h6M9 7h1M12 7h1M17 7h1M21 7h1M24 7h6M33 7h1M5 8h1M9 8h1M12 8h1M21 8h1M29 8h1M33 8h1M5 9h5M12 9h10M29 9h5" />
+  </svg>
 {{ end }}
