--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -14,3 +14,11 @@
     {{- .Title -}}
   {{- end -}}
 </title>
+
+{{ $scripts := slice }}
+{{ $scripts := $scripts | append "js/vendor/alpine.min.js" }}
+{{ $scripts := $scripts | append "js/vendor/headroom.min.js" }}
+{{ $scripts := $scripts | append "js/vendor/prism.min.js" }}
+{{ $scripts := $scripts | append "js/headroom.js" }}
+{{ $scripts := $scripts | append "js/prism.js" }}
+{{ partial "javascript" (dict "context" . "paths" $scripts "name" "js/main.js") }}
