--- a/assets/scss/_colors.scss
+++ b/assets/scss/_colors.scss
@@ -1,3 +1,26 @@
+$gray-50 : #fafafa;
+$gray-100: #f5f5f5;
+$gray-200: #eeeeee;
+$gray-300: #e0e0e0;
+$gray-400: #bdbdbd;
+$gray-500: #9e9e9e;
+$gray-600: #757575;
+$gray-700: #616161;
+$gray-800: #424242;
+$gray-900: #212121;
+
+$blue-50 : #e3f2fd;
+$blue-100: #bbdefb;
+$blue-200: #90caf9;
+$blue-300: #64b5f6;
+$blue-400: #42a5f5;
+$blue-500: #2196f3;
+$blue-600: #1e88e5;
+$blue-700: #1976d2;
+$blue-800: #1565c0;
+$blue-900: #0d47a1;
+
+// Todo: remove
 $red-100: #FF004E;
 $red-200: #EF0049;
 $red-300: #DF0044;
@@ -7,16 +30,6 @@ $red-600: #AF0035;
 $red-700: #9F0030;
 $red-800: #8F002B;
 $red-900: #7F0026;
-
-$blue-100: #00F9EF;
-$blue-200: #00E9E0;
-$blue-300: #00DAD1;
-$blue-400: #00CAC2;
-$blue-500: #00BBB3;
-$blue-600: #00ABA4;
-$blue-700: #009B95;
-$blue-800: #008C86;
-$blue-900: #007C77;
 
 $dark-100: #A5A8BD;
 $dark-200: #9094A7;
