--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -4,6 +4,7 @@
 /* purgecss start ignore */
 @import "accent";
 @import "alpine";
+@import "bit-outline";
 @import "colors";
 @import "content";
 @import "glitch";
