--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
   <div class="single max-w-screen-md mx-auto my-4 px-4">
-    <h1 class="glitch" data-text="{{ .Title }}">{{ .Title }}</h1>
+    <h1>{{ .Title }}</h1>
     {{ .Content }}
   </div>
 {{ end }}
