--- a/assets/scss/_single.scss
+++ b/assets/scss/_single.scss
@@ -11,6 +11,14 @@
 
   p {
     @apply my-4;
+
+    &:first-child {
+      @apply mt-0;
+    }
+
+    &:last-child {
+      @apply mb-0;
+    }
   }
 
   ul, ol {
