--- a/assets/scss/_content.scss
+++ b/assets/scss/_content.scss
@@ -26,7 +26,7 @@
       top: 75%;
       left: -0.1em;
       right: -0.1em;
-      transition: top 300ms ease-out;
+      transition: top 200ms cubic-bezier(0, .8, .13, 1);
       background: rgba($blue-400, 0.4);
     }
 
@@ -53,7 +53,7 @@
   table, th, td {
     @apply p-2;
     @apply border;
-    @apply border-dark-300;
+    @apply border-gray-500;
   }
 
   th {
@@ -62,9 +62,9 @@
 
   blockquote {
     @apply px-4;
-    @apply text-dark-100;
+    @apply text-gray-600;
     @apply border-l-3;
-    @apply border-dark-100;
+    @apply border-gray-600;
     @apply border-opacity-60;
   }
 
