--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,3 +1,3 @@
 {{ define "main" }}
-  <span class="m-auto p-4 font-bit text-7xl leading-none">404</span>
+  <div class="m-auto p-4 font-bit text-7xl leading-none">404</div>
 {{ end }}
