--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,3 +1,3 @@
 {{ define "main" }}
-  <span class="m-auto p-4 font-bit text-7xl leading-none">smolka</span>
+  <div class="m-auto p-4 font-bit text-7xl leading-none">smolka</div>
 {{ end }}
