--- a/assets/scss/_content.scss
+++ b/assets/scss/_content.scss
@@ -69,10 +69,17 @@
   }
 
   button {
-    @apply relative;
     @apply mx-1;
-    @apply p-1;
-    @apply font-bold;
+    @apply px-2;
+    @apply py-1;
+    @apply text-gray-900;
+    @apply bg-white;
+    @apply border;
+    @apply border-gray-500;
+
+    &:hover {
+      @apply bg-gray-100;
+    }
 
     &:focus {
       @apply outline-none;
