--- a/assets/scss/_colors.scss
+++ b/assets/scss/_colors.scss
@@ -20,23 +20,22 @@ $blue-700: #1976d2;
 $blue-800: #1565c0;
 $blue-900: #0d47a1;
 
-// Todo: remove
-$red-100: #FF004E;
-$red-200: #EF0049;
-$red-300: #DF0044;
-$red-400: #CF003F;
-$red-500: #BF003A;
-$red-600: #AF0035;
-$red-700: #9F0030;
-$red-800: #8F002B;
-$red-900: #7F0026;
+$polar-night-0: #2e3440;
+$polar-night-1: #3b4252;
+$polar-night-2: #434c5e;
+$polar-night-3: #4c566a;
 
-$dark-100: #A5A8BD;
-$dark-200: #9094A7;
-$dark-300: #7C7F91;
-$dark-400: #686B7B;
-$dark-500: #535665;
-$dark-600: #3F414F;
-$dark-700: #2A2D39;
-$dark-800: #20232E;
-$dark-900: #161823;
+$snow-storm-0: #d8dee9;
+$snow-storm-1: #e5e9f0;
+$snow-storm-2: #eceff4;
+
+$frost-0: #8fbcbb;
+$frost-1: #88c0d0;
+$frost-2: #81a1c1;
+$frost-3: #5e81ac;
+
+$aurora-0: #bf616a;
+$aurora-1: #d08770;
+$aurora-2: #ebcb8b;
+$aurora-3: #a3be8c;
+$aurora-4: #b48ead;
