--- a/assets/scss/_prism.scss
+++ b/assets/scss/_prism.scss
@@ -1,44 +1,13 @@
-$polar-night-0: #2e3440;
-$polar-night-1: #3b4252;
-$polar-night-2: #434c5e;
-$polar-night-3: #4c566a;
-
-// Snow Storm
-$snow-storm-0: #d8dee9;
-$snow-storm-1: #e5e9f0;
-$snow-storm-2: #eceff4;
-
-// Frost
-$frost-0: #8fbcbb;
-$frost-1: #88c0d0;
-$frost-2: #81a1c1;
-$frost-3: #5e81ac;
-
-// Aurora
-$aurora-0: #bf616a;
-$aurora-1: #d08770;
-$aurora-2: #ebcb8b;
-$aurora-3: #a3be8c;
-$aurora-4: #b48ead;
-
-// Base
-$base-dark: #242933;
-$base-light: #f2f4f8;
-
-// Grey
-$grey-dark: #abb9cf;
-$grey-light: #7b88a1;
+@import "colors";
 
 pre[class*="language-"],
 code[class*="language-"] {
   @apply font-mono;
-  @apply hypens-none;
   @apply text-md;
   @apply text-gray-900;
   @apply whitespace-pre;
   @apply leading-relaxed;
-
-  // background: #2E3440;
+  @apply hypens-none;
 
   .table {
     @apply inline
@@ -46,9 +15,9 @@ code[class*="language-"] {
 }
 
 pre[class*="language-"] {
+  @apply relative;
   @apply my-6;
   @apply p-4;
-  @apply relative;
   @apply overflow-auto;
   @apply shadow-xs;
 }
@@ -58,7 +27,6 @@ pre[class*="language-"] {
   @apply text-md;
   @apply text-gray-900;
   @apply bg-gray-50;
-  @apply leading-relaxed;
 
   padding: 2px 4px;
 }
@@ -71,9 +39,7 @@ pre[class*="language-"] {
 .token.comment,
 .token.doctype,
 .token.prolog {
-  $comment: #636f88;
-
-  color: lighten($comment, 30%);
+  color: #b8bfcc;
 }
 
 .token.boolean,
@@ -88,7 +54,7 @@ pre[class*="language-"] {
 .token.tag,
 .token.url,
 .token.variable {
-  color: saturate(darken($frost-2, 10%), 10%);
+  color: saturate(darken($frost-2, 10%), 20%);
 }
 
 .token.number {
