--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-  <div class="single max-w-screen-md m-auto p-4">
+  <div class="single max-w-screen-md m-auto px-4 py-8 sm:py-16">
     <h1>{{ .Title }}</h1>
     {{ .Content }}
   </div>
