--- a/layouts/partials/javascript.html
+++ b/layouts/partials/javascript.html
@@ -2,5 +2,5 @@
 {{ range $path := .paths }}
   {{ $script = $script | append (resources.Get $path) }}
 {{ end }}
-{{ $script := $script | resources.Concat .name }}
+{{ $script = $script | resources.Concat .name }}
 <script type="text/javascript" src="{{ if .Site.IsServer }}{{ $script.Permalink }}{{ else }}{{ ($script | minify).Permalink }}{{ end }}" defer></script>
