--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -1,17 +1,17 @@
 {{ define "main" }}
   <div class="w-full px-4 py-8 sm:py-16 bg-gray-900">
     <div class="flex flex-col text-center">
-      <span class="mb-2 text-gray-50 text-4xl">{{ .Title }}</span>
-      <span class="text-gray-400">{{ .Summary }}</span>
+      <span class="max-w-screen-lg mx-auto mb-2 text-gray-50 text-4xl">{{ .Title }}</span>
+      <span class="max-w-screen-sm mx-auto text-gray-400">{{ .Summary }}</span>
     </div>
   </div>
   <div class="w-full max-w-screen-md mx-auto px-4 py-8 sm:py-16">
     <div class="single">
       {{ .Content }}
     </div>
-    <div class="flex justify-between my-6 py-6 text-sm text-gray-500 border-t border-gray-400">
-      <div class="flex align-middle">
-        <svg class="w-4 h-4 my-auto mr-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+    <div class="flex justify-between mt-6 pt-6 text-sm text-gray-500 border-t border-gray-400">
+      <span class="inline-flex items-center">
+        <svg class="w-4 h-4 mr-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
           <path fill="currentColor" d="M17 3h4a1 1 0 0 1 1 1v16a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h4V1h2v2h6V1h2v2zm-2 2H9v2H7V5H4v4h16V5h-3v2h-2V5zm5 6H4v8h16v-8z" />
         </svg>
         <span>
@@ -21,9 +21,9 @@
             {{ dateFormat "2006-01-02" .Date.Local }}
           {{ end }}
         </span>
-      </div>
-      <a class="flex align-middle" href="{{ .Site.Params.ContentUrl}}/{{ path.Join "" .File.Path }}" target="_blank">
-        <svg class="w-4 h-4 my-auto mr-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+      </span>
+      <a class="inline-flex items-center" href="{{ .Site.Params.ContentUrl}}/{{ path.Join "" .File.Path }}" target="_blank">
+        <svg class="w-4 h-4 mr-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
           <path fill="currentColor" d="M7.05 14.121L4.93 16.243l2.828 2.828L19.071 7.757 16.243 4.93 14.12 7.05l1.415 1.414L14.12 9.88l-1.414-1.415-1.414 1.415 1.414 1.414-1.414 1.414-1.414-1.414-1.415 1.414 1.415 1.414-1.415 1.415L7.05 14.12zm9.9-11.313l4.242 4.242a1 1 0 0 1 0 1.414L8.464 21.192a1 1 0 0 1-1.414 0L2.808 16.95a1 1 0 0 1 0-1.414L15.536 2.808a1 1 0 0 1 1.414 0zM14.12 18.363l1.415-1.414 2.242 2.243h1.414v-1.414l-2.242-2.243 1.414-1.414L21 16.757V21h-4.242l-2.637-2.637zM5.636 9.878L2.807 7.05a1 1 0 0 1 0-1.415l2.829-2.828a1 1 0 0 1 1.414 0L9.88 5.635 8.464 7.05 6.343 4.928 4.929 6.343l2.121 2.12-1.414 1.415z" />
         </svg>
         <span>Improve</span>
