--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,3 +1,3 @@
 {{ define "main" }}
-  <div class="m-auto p-4 font-bit text-7xl leading-none">404</div>
+  <div class="m-auto px-4 py-8 sm:py-16 font-bit text-index leading-none">404</div>
 {{ end }}
