--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,19 +1,19 @@
 {{ define "main" }}
   <div class="w-full px-4 py-8 sm:py-16 bg-gray-900">
     <div class="flex flex-col text-center">
-      <span class="mb-2 text-gray-50 text-4xl">{{ .Title }}</span>
-      <span class="text-gray-400">{{ .Summary }}</span>
+      <span class="max-w-screen-lg mx-auto mb-2 text-gray-50 text-4xl">{{ .Title }}</span>
+      <span class="max-w-screen-sm mx-auto text-gray-400">{{ .Summary }}</span>
     </div>
     {{ .Content }}
   </div>
   <div class="w-full max-w-screen-md mx-auto px-4 py-8 sm:py-16">
     {{ range .Data.Pages.GroupByDate "2006" }}
-      <div class="block sm:flex mb-6 last:mb-0">
-        <span class="mr-0 sm:mr-10 mb-2 sm:mb-0 font-bit text-5xl leading-none">{{ .Key }}</span>
-        <ul class="w-full">
+      <div class="block sm:flex mb-8 last:mb-0">
+        <div class="mr-0 sm:mr-8 mb-1 sm:mb-0 font-bit text-5xl leading-none">{{ .Key }}</div>
+        <div class="w-full">
           {{ range .Pages }}
-            <li class="py-3 border-b border-dashed border-gray-500">
-              <a class="flex justify-between" href="{{ .Permalink }}">
+            <div class="border-b border-dashed border-gray-500">
+              <a class="flex justify-between py-4" href="{{ .Permalink }}">
                 <span>{{ .Title }}</span>
                 <span>
                   {{ if .Site.Params.dateformNum }}
@@ -23,9 +23,9 @@
                   {{ end }}
                 </span>
               </a>
-            </li>
+            </div>
           {{ end }}
-        </ul>
+          </div>
       </div>
     {{ end }}
   </div>
