--- a/layouts/shortcodes/figures.html
+++ b/layouts/shortcodes/figures.html
@@ -1,3 +1,3 @@
-<div class="w-full flex flex-col sm:flex-row justify-center my-6">
+<div class="flex flex-col sm:flex-row justify-center w-full my-6">
   {{ .Inner }}
 </div>
