--- a/assets/scss/_roboto.scss
+++ b/assets/scss/_roboto.scss
@@ -2,6 +2,7 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 100;
+  font-display: swap;
   src: url('/fonts/roboto/roboto-100.woff2') format('woff2'),
        url('/fonts/roboto/roboto-100.woff') format('woff');
 }
@@ -10,6 +11,7 @@
   font-family: 'Roboto';
   font-style: italic;
   font-weight: 100;
+  font-display: swap;
   src: url('/fonts/roboto/roboto-100-italic.woff2') format('woff2'),
        url('/fonts/roboto/roboto-100-italic.woff') format('woff');
 }
@@ -18,6 +20,7 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 300;
+  font-display: swap;
   src: url('/fonts/roboto/roboto-300.woff2') format('woff2'),
        url('/fonts/roboto/roboto-300.woff') format('woff');
 }
@@ -26,6 +29,7 @@
   font-family: 'Roboto';
   font-style: italic;
   font-weight: 300;
+  font-display: swap;
   src: url('/fonts/roboto/roboto-300-italic.woff2') format('woff2'),
        url('/fonts/roboto/roboto-300-italic.woff') format('woff');
 }
@@ -34,6 +38,7 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 400;
+  font-display: swap;
   src: url('/fonts/roboto/roboto-400.woff2') format('woff2'),
        url('/fonts/roboto/roboto-400.woff') format('woff');
 }
@@ -42,6 +47,7 @@
   font-family: 'Roboto';
   font-style: italic;
   font-weight: 400;
+  font-display: swap;
   src: url('/fonts/roboto/roboto-400-italic.woff2') format('woff2'),
        url('/fonts/roboto/roboto-400-italic.woff') format('woff');
 }
@@ -50,6 +56,7 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 500;
+  font-display: swap;
   src: url('/fonts/roboto/roboto-500.woff2') format('woff2'),
        url('/fonts/roboto/roboto-500.woff') format('woff');
 }
@@ -58,6 +65,7 @@
   font-family: 'Roboto';
   font-style: italic;
   font-weight: 500;
+  font-display: swap;
   src: url('/fonts/roboto/roboto-500-italic.woff2') format('woff2'),
        url('/fonts/roboto/roboto-500-italic.woff') format('woff');
 }
@@ -66,6 +74,7 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 700;
+  font-display: swap;
   src: url('/fonts/roboto/roboto-700.woff2') format('woff2'),
        url('/fonts/roboto/roboto-700.woff') format('woff');
 }
@@ -74,6 +83,7 @@
   font-family: 'Roboto';
   font-style: italic;
   font-weight: 700;
+  font-display: swap;
   src: url('/fonts/roboto/roboto-700-italic.woff2') format('woff2'),
        url('/fonts/roboto/roboto-700-italic.woff') format('woff');
 }
@@ -82,6 +92,7 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 900;
+  font-display: swap;
   src: url('/fonts/roboto/roboto-900.woff2') format('woff2'),
        url('/fonts/roboto/roboto-900.woff') format('woff');
 }
@@ -90,6 +101,7 @@
   font-family: 'Roboto';
   font-style: italic;
   font-weight: 900;
+  font-display: swap;
   src: url('/fonts/roboto/roboto-900-italic.woff2') format('woff2'),
        url('/fonts/roboto/roboto-900-italic.woff') format('woff');
 }
